--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.5",
     "pg": "^8.13.1"
   }
 }
